--- a/Individual Coursework1/assi.html
+++ b/Individual Coursework1/assi.html
@@ -334,7 +334,12 @@ var webstore = new Vue({
         }
 
     },
-
+    computed: {
+        cartItemCount: function () {
+            return this.cart.length
+        },
+    }
+});
 </script>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
